First draft of JS
First draft of JS

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header>
 	<h1 id="name">
-		NG Web Development
+		N.D.G.
 	</h1>
 	<nav>
 	<ul>
@@ -31,7 +31,7 @@
 </header>
 <section id="hero">
 	<p id="welcome">
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tincidunt nibh urna, at consequat quam ornare nec. Pellentesque sed malesuada massa. Etiam finibus at urna a aliquet. Aliquam at tellus at nisi iaculis vestibulum.
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tincidunt nibh urna, at consequat quam ornare nec.
 	</p>
 </section>
 
@@ -140,13 +140,43 @@
 
 <section id="portfolio">
 	<h4>Portfolio</h4>
-	<div class="clip">
-	</div>
-	<div class="clip">
-	</div>
-	<div class="clip">
-	</div>
+	<a id="linkOne" href="#"><div class="clip">Click Me
+	</div></a>
+	<a id="linkTwo" href="#"><div class="clip">Click Me
+	</div></a>
+	<a id="linkThree" href="#"><div class="clip">Click Me
+	</div></a>
 </section>
+
+<!-- Modal Pop Ups -->
+
+<div id="clipOne" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Clip Numero Uno</p>
+  </div>
+</div>
+
+<div id="clipTwo" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Clip Numero Dos</p>
+  </div>
+ </div>
+
+<div id="clipThree" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Clip Numero Tres</p>
+  </div>
+
+</div>
 
 <aside>
 		<p id="inspiration">
@@ -162,6 +192,9 @@
 </footer>
 
 </div>
+
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 
 </body>
 </html>
