--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <div id="container">
 
 <header>
-	<h1 id="name">
-		N.D.G.
-	</h1>
+	<img src="images/nglogo.png" width="150px">
 	<nav>
 	<ul>
 		<li>
@@ -65,7 +63,7 @@
 					<li class="event">
 						<input type="radio" name="tl-group" checked/>
 						<label></label>
-						<div class="thumb user-4"><span>Summary</span></div>
+						<div class="thumb img-1"><span>Summary</span></div>
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
@@ -79,7 +77,7 @@
 					<li class="event">
 						<input type="radio" name="tl-group"/>
 						<label></label>
-						<div class="thumb user-6"><span>Experience</span></div>
+						<div class="thumb img-2"><span>Experience</span></div>
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
@@ -93,7 +91,7 @@
 					<li class="event">
 						<input type="radio" name="tl-group"/>
 						<label></label>
-						<div class="thumb user-3"><span>Education</span></div>
+						<div class="thumb img-3"><span>Education</span></div>
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
@@ -107,7 +105,7 @@
 					<li class="event">
 						<input type="radio" name="tl-group"/>
 						<label></label>
-						<div class="thumb user-5"><span>Skills</span></div>
+						<div class="thumb img-4"><span>Skills</span></div>
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
@@ -121,7 +119,7 @@
 					<li class="event">
 						<input type="radio" name="tl-group"/>
 						<label></label>
-						<div class="thumb user-2"><span>Ecetera</span></div>
+						<div class="thumb img-5"><span>Ecetera</span></div>
 						<div class="content-perspective">
 							<div class="content">
 								<div class="content-inner">
@@ -140,11 +138,11 @@
 
 <section id="portfolio">
 	<h4>Portfolio</h4>
-	<a id="linkOne" href="#"><div class="clip">Click Me
+	<a id="linkOne" href="#"><div class="clip" id="clipDivOne">
 	</div></a>
-	<a id="linkTwo" href="#"><div class="clip">Click Me
+	<a id="linkTwo" href="#"><div class="clip" id="clipDivTwo">
 	</div></a>
-	<a id="linkThree" href="#"><div class="clip">Click Me
+	<a id="linkThree" href="#"><div class="clip" id="clipDivThree">
 	</div></a>
 </section>
 
