--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Nicole Danielle Portfolio</title>
 <!-- <link rel="stylesheet" href="css/reset.css"> -->
 <link rel="stylesheet" href="css/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,600i,700,900" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Euphoria+Script" rel="stylesheet">
 </head>
