--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 	</div>
 </div>
 
-<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+<script src="//code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 
 </body>
