--- a/Rock-Paper-Scissors/index.html
+++ b/Rock-Paper-Scissors/index.html
@@ -7,7 +7,7 @@
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
   
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 </head>
 <body>
     <h1>Rock, Paper, or Scissors?</h1>
